welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: not found: value not
while ((not(estSurBiscuit()))&&(not(porteBiscuit()))){
        ^Balin:10: error: not found: value not
if ((estSurBiscuit())&&not(porteBiscuit())){
                       ^