welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (estFaceMur()) {
	gauche();
	avance();
	gauche();
	avance();
}
while ((not(estSurBiscuit()))&&(not(porteBiscuit()))){
	recule();
}
if ((estSurBiscuit())&&not(porteBiscuit())){
	prendBiscuit();
}
while ((estSurBiscuit()==false)&&(porteBiscuit()==false)){
	avance();
}
if ((estSurBiscuit())&&(porteBiscuit())){
	recule();
	poseBiscuit();
	recule();
}
